Improve code consistency by using List.of() instead of Arrays.asList()
Co-authored-by: brandon-wilson1993 <173226631+brandon-wilson1993@users.noreply.github.com>